--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <nav>
       <a href="#" class="active">Home</a>
       <a href="features.html">Features</a>
-      <a href="/login-registration/login.html">Login</a>
+      <a href="login-registration/login.html">Login</a>
       <a href="login-registration/registration.html">Register</a>
     </nav>
   </header>
@@ -175,8 +175,8 @@
       <h1><span id="typed-text"></span><span class="cursor"></span></h1>
       <p id="hero-subtitle">Track grades, manage goals, and stay organized with a clean and modern academic tool.</p>
       <div class="hero-actions" id="hero-buttons">
-        <a href="/login-registration/login.html" class="btn primary">Get Started</a>
-        <a href="/features.html" class="btn secondary">Features</a>
+        <a href="login-registration/login.html" class="btn primary">Get Started</a>
+        <a href="features.html" class="btn secondary">Features</a>
       </div>
     </div>
   </section>
@@ -245,4 +245,5 @@
     window.onload = type;
   </script>
 </body>
+
 </html>
