Update login remove redflag.html

--- a/login-registration/login.html
+++ b/login-registration/login.html
@@ -70,7 +70,7 @@
   <div class="bg-shapes"></div>
   <main class="container">
     <div class="app-logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Logo-placeholder.png" alt="GoalGrade logo">
+      <img src="">
     </div>
     <h1 class="app-name">GoalGrade</h1>
     <p class="app-caption">Track your goals. Measure your growth.</p>
@@ -105,3 +105,4 @@
   </script>
 </body>
 </html>
+
