Update registration remove redflag.html

--- a/login-registration/registration.html
+++ b/login-registration/registration.html
@@ -43,7 +43,7 @@
   <div class="bg-shapes"></div>
   <main class="container">
     <div class="app-logo">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Logo-placeholder.png" alt="GoalGrade logo">
+      <img src="">
     </div>
     <h1 class="app-name">GoalGrade</h1>
     <p class="app-caption">Create your account and start your journey.</p>
@@ -90,3 +90,4 @@
   </script>
 </body>
 </html>
+
